# G4DCSmonitor

./: CMakeLists.txt  G4DCSmonitor.cc  GNUmakefile  README.md
examples/geometric_biasing/: README.md  compare_bias_radii.C  run_gamma.mac
examples/p1-surface_flux_generation/: 0_particle.mac  1_fuel_scan.mac  2_beamOn.mac  README.md  globals.mac  run.mac
examples/p2-detector_response/: README.md  _orbit_map.sh  generate_macros.sh  start_all.sh  start_one_base_fuel.sh
examples/p2-detector_response/analysis/: make_assembly_heatmaps.C  make_assembly_spectra.C  plot_nominal_heatmap.C  plot_plastic_heatmap_diff.C
include/: DCSMonitorHit.hh  DCSMonitorSD.hh  DetectorConstruction.hh  DetectorMessenger.hh  GeometryCASTOR440.hh  GeometryCLYC.hh  GeometryHemiShield.hh  GeometryMuonScint.hh  GeometryParallelBiasing.hh  GeometryPlastic.hh  HistoManager.hh  MuonScintHit.hh  MuonScintSiPMSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  ProgressBar.hh  Run.hh  RunAction.hh  RunMessenger.hh  SurfaceFluxSampler.hh  SurfaceFluxSamplerMessenger.hh
macros/: run.mac
scripts/: PlotWattSpectrum.C  analyze_primary.C
src/: ActionInitialization.cc  DCSMonitorHit.cc  DCSMonitorSD.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  GeometryCASTOR440.cc  GeometryCLYC.cc  GeometryHemiShield.cc  GeometryMuonScint.cc  GeometryParallelBiasing.cc  GeometryPlastic.cc  HistoManager.cc  MuonScintHit.cc  MuonScintSiPMSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  Run.cc  RunAction.cc  RunMessenger.cc  SteppingAction.cc  SurfaceFluxSampler.cc  SurfaceFluxSamplerMessenger.cc
